Update unit test to JUnit5
Updates org.openecomp.sdc.vendorsoftwareproduct.impl.
VendorSoftwareProductManagerImplTest to JUnit5.

Change-Id: I505f2f198dd776e2b3d10e741998014c1db0275f
Issue-ID: SDC-3709
Signed-off-by: andre.schmid <andre.schmid@est.tech>